--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1 class="site-title">Paulo Silveira</h1>
-        <h2 class="site-subtitle">jr. frontend developer</h2>
+        <h1 class="site-title">Marcel Otavio Cerri</h1>
+        <h2 class="site-subtitle">Professor da UNESP - Engenharia de Bioprocessos e Biotecnologia</h2>
     </header>
 </body>
 </html>
