nova versão aula 02 imersãocc

--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Document</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Grupo de Pesquisa de Biorreatores</title>
     <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -10,12 +11,22 @@
         <nav class="menu">
             <ul>
                 <li><a href="#">Sobre</a></li>
-                <li><a href="#">Portfólio</a></li>
+                <li><a href="#">Pesquisa</a></li>
+                <li><a href="#">Disciplinas</a></li>
                 <li><a href="#">Contato</a></li>
             </ul>
         </nav>
-        <h1 class="site-title">Marcel Otavio Cerri</h1>
-        <h2 class="site-subtitle">Professor da UNESP - Engenharia de Bioprocessos e Biotecnologia</h2>
+        <div>
+            <h1 class="site-title">Marcel Otavio Cerri</h1>
+            <h2 class="site-subtitle">Professor UNESP - Engenharia de Bioprocessos e Biotecnologia</h2>
+        </div>
+       
     </header>
+    <section>
+        <figure>
+            <img class="image" src="./img/foto_marcel.jpg">
+            <figcaption>Marcel Otavio Cerri</figcaption>
+        </figure>
+    </section>
 </body>
 </html>
