--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Grupo de Pesquisa de Biorreatores</title>
     <link rel="stylesheet" href="css/styles.css">
+    <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Sonsie+One&family=Source+Code+Pro&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
@@ -18,15 +19,34 @@
         </nav>
         <div>
             <h1 class="site-title">Marcel Otavio Cerri</h1>
-            <h2 class="site-subtitle">Professor UNESP - Engenharia de Bioprocessos e Biotecnologia</h2>
+            <h2 class="site-subtitle">Professor UNESP</h2>
+            <h2 class="site-subtitle">Engenharia de Bioprocessos e Biotecnologia</h2>
+            <figure>
+                <img class="image" src="./img/foto_marcel.jpg" alt="Marcel Otavio Cerri">
+                <figcaption>Marcel Otavio Cerri</figcaption>
+            </figure>
         </div>
        
     </header>
-    <section>
-        <figure>
-            <img class="image" src="./img/foto_marcel.jpg">
-            <figcaption>Marcel Otavio Cerri</figcaption>
-        </figure>
+    <section class="sobre">
+        <h2 class="site-subtitle">Sobre</h2>
+       <p>
+        Possui graduação em Engenharia Quimica pela Universidade Federal de São Carlos (2002), mestrado em Engenharia Química
+        pela Universidade Federal de São Carlos (2005) e doutorado da Universidade Federal de São Carlos (2009). Tem experiência
+        na área de Engenharia Química, com ênfase em Operações Características de Processos Bioquímicos, atuando principalmente
+        nos seguintes temas: biorreator airlift, biorreator convencional, transmissão de calor, biorreator pneumático,
+        caracterização da velocidade de cisalhamento em biorreatores pneumáticos, hdirodinâmica em biorratores pneumáticos,
+        projeto e desenvolvimento em biorreatores pneumáticos e convencionais. Foi professor voluntário da Universidade Federal
+        de São Carlos na disciplina de Princípios de Processos Químicos. De janeiro de 2010 a março de 2014 foi professor
+        Adjunto da UFSJ (Universidade Federal de João del Rei - Campus Alto Paraopeba) no curso de Engenharia de Bioprocessos.
+        Atualmente é Professor Assistente da Universidade Estadual Paulista "Júlio de Mesquita Filho" atua no curso de
+        Engenharia de Bioprocessos.
+       </p>
+    </section>
+
+    <section class="pesquisa">
+        <h2 class="site-subtitle">Pesquisa</h2>
+        
     </section>
 </body>
 </html>
