Atualizado as orientações
criado também os artigos

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
                 Artigos Publicados
             </div>
             <div class="box-b">
-                <a href="#">Acesse aqui</a>
+                <a href="./pages/artigos.html">Acesse aqui</a>
             </div>
             <div class="box">
                 Orientações
