--- a/pages/artigos.html
+++ b/pages/artigos.html
@@ -20,46 +20,42 @@
             </ul>
         </nav>
         <div class="titulo">
-            <h1 class="site-title">Orientações</h1>
+            <h1 class="site-title">Artigos Publicados</h1>
         </div>
 
     <table class="fixed" border="1">
+        <col width="40%" />
         <col width="30%" />
-        <col width="50%" />
-        <col width="10%" />
+        <col width="20%" />
         <col width="10%" />
        <tr>
-            <th>
-                Nome
-            </th>
             <th>
                 Título
             </th>
             <th>
-                Data Defesa
+                Autores
+            </th>
+            <th>
+                Revista
             </th>
             <th>
                 Link
             </th>
         </tr>
             
-        </tr>
-            <th colspan="4">
-                Mestrado
-            </th>
-        </tr>
+       
         <tr>
             <td>
-                Johnny Anderson Campos Oliveira
+                Average shear rate for non-Newtonian fluids in a concentric-tube airlift bioreactor
             </td>
             <td>
-                Farmácia magistral e o desenvolvimento sustentável: da geração ao descarte final de resíduos.
+                M.O.Cerri, L.Futiwaki, C.D.F.Jesus, A.J.G.Cruz, A.C.Badino
             </td>
             <td>
-                2013
+                Biochemical Engineering Journal, 2008
             </td>
             <td>
-               <a href="https://ufsj.edu.br/portal-repositorio/File/ppgtds/DISSERTACOES/Johnny.pdf">Dissertação</a>
+               <a href="https://doi.org/10.1016/j.bej.2007.08.009">Artigo</a>
         </tr>
             <td>
                 Kaio César da Silva Rodrigues
@@ -115,11 +111,6 @@
             </td>
         </tr>
 
-        <tr>
-            <th colspan="4">
-                Doutorado
-            </th>
-        </tr>
         <tr>
             <td>
                 Aylime Castanho Bolognesi Melchior Jesuino
