--- a/pages/biorreatores.html
+++ b/pages/biorreatores.html
@@ -16,6 +16,7 @@
                 <li><a href="#">Biorreatores</a></li>
                 <li><a href="#">Processos</a></li>
                 <li><a href="#">Desenho</a></li>
+                <li><a href="#">Balanço</a></li>
                 <li><a href="#">Python</a></li>
             </ul>
         </nav>
