--- a/pages/biorreatores.html
+++ b/pages/biorreatores.html
@@ -3,10 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grupo de Pesquisa de Biorreatores</title>
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-1412940-7"></script>
+    <script>
+        window.dataLayer = window.dataLayer || [];
+        function gtag(){dataLayer.push(arguments);}
+        gtag('js', new Date());
+
+        gtag('config', 'UA-1412940-7');
+    </script>
+    <title>Marcel Otavio Cerri</title>
     <link rel="stylesheet" href="css/styles2.css">
     <link href="https://fonts.googleapis.com/css2?family=Archivo+Black&family=Sonsie+One&family=Source+Code+Pro&display=swap" rel="stylesheet">
     <script src="https://kit.fontawesome.com/e850c84525.js" crossorigin="anonymous"></script>
+
+
 </head>
 <body>
    <header>
