página publicações está em ordem

--- a/pages/artigos.html
+++ b/pages/artigos.html
@@ -24,7 +24,8 @@
          <nav class="menu">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Artigos Publicados</a></li>
+                <li><a href="#">Artigos</a></li>
+                <li><a href="#">Orientações</a></li>
                 <li><a href="#">Hidrodinâmica</a></li>
                 <li><a href="#">Modelagem</a></li>
                 <li><a href="#">Cultivos</a></li>
@@ -67,75 +68,354 @@
             </td>
             <td>
                <a href="https://doi.org/10.1016/j.bej.2007.08.009">Artigo</a>
-        </tr>
-            <td>
-                Kaio César da Silva Rodrigues
-            </td>
-            <td>
-                Estudo da influência de pH e da temperatura na produção de ácido clavulânico por Streptomyces clavuligerus em biorreator convencional.
-            </td>
-            <td>
-                2015
-            </td>
-            <td>
-               <a href="https://ufsj.edu.br/portal-repositorio/File/ppgtds/DISSERTACOES/Kaio_Rodrigues.pdf">Dissertação</a>
-        </tr>
-        </tr>
-            <td>
-                Renata Maria M. Pontes Ribeiro
-            </td>
-            <td>
-                Estudo da velocidade de cisalhamento em biorreatores convencionais na produção de ácido clavulânico por Streptomyces clavuligerus.
-            </td>
-            <td>
-                2017
-            </td>
-            <td>
-               <a href="#">Dissertação</a>
-            </td>
-        </tr>
-        </tr>
-            <td>
-                Gisele Aline Fonseca
-            </td>
-            <td>
-                Aprimoramento da composição do meio de cultura para a produção de ácido clavulânico com suplementação de aminoácidos e quantificação de íons amônio.
-            </td>
-            <td>
-                2018
-            </td>
-            <td>
-               <a href="https://repositorio.unesp.br/handle/11449/165327">Dissertação</a>
-            </td>
-        </tr>
-            <td>
-                Ana Paula Abuchain Sousa
-            </td>
-            <td>
-                Aumento de escala para produção de proteína verde fluorescente melhorada (Enhanced Green Fluorescent Protein - EGFP) a parti de Escherichia coli recombinante em biorreator convencional.
-            </td>
-            <td>
-                2019
-            </td>
-            <td>
-               <a href="https://repositorio.unesp.br/handle/11449/181957">Dissertação</a>
             </td>
         </tr>
 
         <tr>
             <td>
-                Aylime Castanho Bolognesi Melchior Jesuino
+                Determination of the average shear rate in a stirred and aerated tank bioreactor
             </td>
             <td>
-                Estudo de diferentes estratégias de cultivo de Escherichia coli recombinante para produção de GFP (Green Fluorescent Protein).
+                A.Campesi, M.O.Cerri, C.O.Hokka, A.C.Badino
             </td>
             <td>
-                2020
+                Bioprocess and Biosystems Engineering, 2009
             </td>
-              <td>
-               <a href="https://repositorio.unesp.br/handle/11449/191825">Tese</a>
+            <td>
+               <a href="http://dx.doi.org/10.1007/s00449-008-0242-4">Artigo</a>
             </td>
         </tr>
+
+        <tr>
+            <td>
+                Prediction of mean bubble size in pneumatic reactors
+            </td>
+            <td>
+                M.O.Cerri, J.C.Baldacin, A.J.G.Cruz, C.O.Hokka, A.C.Badino
+            </td>
+            <td>
+                Biochemical Engineering Journal, 2010
+            </td>
+            <td>
+               <a href="https://doi.org/10.1016/j.bej.2009.03.009">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Oxygen transfer in three scales of concentric tube airlift bioreactors
+            </td>
+            <td>
+                M.O.Cerri,  A.C.Badino
+            </td>
+            <td>
+                Biochemical Engineering Journal, 2010
+            </td>
+            <td>
+               <a href="https://doi.org/10.1016/j.bej.2010.04.013">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Average shear rate in three pneumatic bioreactors
+            </td>
+            <td>
+                S.S.Thomasi, M.O.Cerri,  A.C.Badino
+            </td>
+            <td>
+                Bioprocess and Biosystems Engineering, 2010
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1007/s00449-010-0422-x">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                 Gas Hold-Up and Mass Transfer in Three Geometrically Similar Internal Loop Airlift Reactors Using Newtonian Fluids
+            </td>
+            <td>
+                M.O.Cerri,  L.M.Policarpo, A.C.Badino
+            </td>
+            <td>
+                International Journal of Chemical Reactor Engineering, 2010
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.2202/1542-6580.1987">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                 Shear conditions in clavulanic acid production by Streptomyces clavuligerus in stirred tank and airlift bioreactors
+            </td>
+            <td>
+                M.O.Cerri, A.C.Badino
+            </td>
+            <td>
+                Bioprocess and Biosystems Engineering, 2012
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1007/s00449-012-0682-8">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                 Influence of gas-liquid separator design on performance of airlift bioreactors
+            </td>
+            <td>
+                M.N.Esperança, M.O.Cerri, A.C.Badino
+            </td>
+            <td>
+                World Academy of Science, Engineering and Technology, 2013
+            </td>
+            <td>
+               <a href="http://citeseerx.ist.psu.edu/viewdoc/download?doi=10.1.1.827.9795&rep=rep1&type=pdf">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Otimização das variáveis, pH, força iônica e meio nutricional na descoloração de corante industrial têxtil pelo fungo Aspergillus aculeatus
+            </td>
+            <td>
+                K.C.Silva, T.M.Silva, W.F.Silva Junior, M.O.Cerri, L.S.Silva, ; B.M.A.Carvalho
+            </td>
+            <td>
+                Biochemistry and Biotechnology Reports, 2013
+            </td>
+            <td>
+               <a href="http://www.uel.br/revistas/uel/index.php/bbr/article/viewFile/15353/12821">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+            Comparison between average shear rates in conventional bioreactor with Rushton and Elephant ear impellers
+            </td>
+            <td>
+            M.C.C.Bustamante, M.O.Cerri, A.C.Badino
+            </td>
+            <td>
+            Chemical Engineering Science, 2013
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1016/j.ces.2012.12.028">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+            Gas hold-up and oxygen mass transfer in three pneumatic bioreactors operating with sugarcane bagasse suspensions
+            </td>
+            <td>
+            M.N.Esperança,F.M.Cunha, M.O.Cerri, T.C.Zangirolami, C.S.FARINAS, A.C.Badino
+            </td>
+            <td>
+             Bioprocess and Biosystems Engineering, 2014
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1007/s00449-013-1049-5">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Corrigendum to -Comparison between average shear rates in conventional bioreactor with Rushton and Elephant ear impellers- [Chem. Eng. Sci. 90 (2013) 92-100]
+            </td>
+            <td>
+                M.C.C.Bustamante, M.O.Cerri, A.C.Badino
+            </td>
+            <td>
+                 Chemical Engineering Science, 2014
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1016/j.ces.2013.12.018">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Adsorption of immunoglobulin Y in supermacroporous continuous cryogel with immobilized Cu2+ ions. Journal of Chromatography
+            </td>
+            <td>
+                W.F.Silva Junior, R.Cano, A.H.Totola, L.M.Carvalho, M.O.Cerri, J.S.R.Coimbra, G.G.P.Carvalho, B.M.A.Carvalho
+            </td>
+            <td>
+                Journal of Chromatography, 2015
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1016/j.chroma.2015.03.052">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                A new approach for kLa determination by gassing-out method in pneumatic bioreactors
+            </td>
+            <td>
+                M.O.Cerri, M.N.Esperança, A.C.Badino, M.P.A.Ribeiro
+            </td>
+            <td>
+                Journal of Chemical Technology and Biotechnology, 2016
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1002/jctb.4937">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Automated algorithm to determine kLa considering system delay
+            </td>
+            <td>
+                P.Torres, M.O.Cerri, M.P.A.Ribeiro, J.R.Perez-Correa, E.Agosin 
+            </td>
+            <td>
+                Journal of Chemical Technology and Biotechnology, 2016
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1002/jctb.5157">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Biorreatores Pneumáticos: Simples e Eficientes
+            </td>
+            <td>
+                A.C.Badino,  C.E.Mendes, M.O.Cerri, M.N.Esperança, R.Bettega
+            </td>
+            <td>
+                Revista Brasileira de Engenharia Química, 2016
+            </td>
+            <td>
+               <a href="https://edisciplinas.usp.br/pluginfile.php/4318065/mod_resource/content/1/rebeq2016_JULHO_01L.pdf">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Purification of clavulanic acid produced by Streptomyces clavuligerus via submerged fermentation using polyethylene glycol/cholinium chloride aqueous two-phase systems
+            </td>
+            <td>
+                P.Panas, C.Lopes, M.O.Cerri,S.P.M.Ventura, V.C.Santos-Ebinuma, J.F.B.Pereira
+            </td>
+            <td>
+                Fluid Phase Equilibria, 2017
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1016/j.fluid.2017.07.005">Artigo</a>
+            </td>
+        </tr>
+
+       <tr>
+            <td>
+               Screening of medium constituents for clavulanic acid production by Streptomyces clavuligerus.
+            </td>
+            <td>
+              K.C.S.Rodrigues, A.T.Souza, A.C.Badino, D.B.Pedrolli, M.O.Cerri
+            </td>
+            <td>
+                Brazilian Journal of Microbiology, 2018
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1016/j.bjm.2018.01.006">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+               Application of Acid and Cold Stresses to Enhance the Production of Clavulanic Acid by Streptomyces clavuligerus
+            </td>
+            <td>
+              K.C.S.Rodrigues, C.L.L.Costa, A.C.Badino, D.B.Pedrolli, J.F.B.Pereira, M.O.Cerri
+            </td>
+            <td>
+                Applied Biochemistry and Biotechnology, 2018
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1007/s12010-019-02953-y">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+               Aeration-step method for kLa measurement under growth conditions in pneumatic bioreactors
+            </td>
+            <td>
+              J.C.Mestre, M.O.Cerri, M.N.Esperança, D.B.Pedrolli, A.C.Badino
+            </td>
+            <td>
+                Journal of Chemical Technology and Biotechnology, 2019
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1002/jctb.6025">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+               Average shear rate in airlift bioreactors: searching for the true value
+            </td>
+            <td>
+              M.N.Esperança, C.E.Mendes, G.Y.Rodriguez, M.O.Cerri,R.Béttega, A.C.Badino
+            </td>
+            <td>
+                Bioprocess and Biosystems Engineering, 2019
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1007/s00449-019-02100-1">Artigo</a>
+            </td>
+        </tr>
+
+         <tr>
+            <td>
+                Engineering Microbial Living Therapeutics: The Synthetic Biology Toolbox
+            </td>
+            <td>
+              D.B.Pedrolli, N.V.Ribeiro, P.N.Squizato, V.N.De Jesus, D.A.Cozetto, R.B.Tuma, A.Gracindo, M.B.Cesar, P.J.C.Freire, A.F.M.Da Costa, M.R.C.R.Lins, G.G.Correa, M.O.Cerri
+            </td>
+            <td>
+                Trends in Biotechnology, 2019
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1016/j.tibtech.2018.09.005">Artigo</a>
+            </td>
+        </tr>
+
+        <tr>
+            <td>
+                Mass Transfer Performance of Ethanol Removal by CO Stripping in Different Pneumatic Bioreactors
+            </td>
+            <td>
+              T.B.Martins, L.P.Almeida, M.O.Cerri, A.C.Badino.
+            </td>
+            <td>
+                Industrial Biotechnology, 2020
+            </td>
+            <td>
+               <a href="http://dx.doi.org/10.1089/ind.2019.0035">Artigo</a>
+            </td>
+        </tr>
+
+           <tr>
+            <td>
+               Sparger design as key parameter to define shear conditions in pneumatic bioreactors
+            </td>
+            <td>
+              M.N.Esperança, C.E.Mendes, G.Y.Rodriguez, M.O.Cerri, R.Béttega, A.C.Badino
+            </td>
+            <td>
+                Biochemical Engineering Journal, 2020
+            </td>
+            <td>
+               <a href="https://doi.org/10.1016/j.bej.2020.107529">Artigo</a>
+            </td>
+        </tr>
+
     </table>
     <div class="footer">
         <p>
