--- a/pages/orientacao.html
+++ b/pages/orientacao.html
@@ -24,6 +24,7 @@
             <ul>
                 <li><a href="../index.html">Home</a></li>
                 <li><a href="#">Artigos Publicados</a></li>
+                <li><a href="#">Orientações</a></li>
                 <li><a href="#">Hidrodinâmica</a></li>
                 <li><a href="#">Modelagem</a></li>
                 <li><a href="#">Cultivos</a></li>
