--- a/index.html
+++ b/index.html
@@ -67,13 +67,13 @@
                 Artigos Publicados
             </div>
             <div class="box-b">
-                <a href="./pages/artigos.html">Acesse aqui</a>
+                <a href="./pages/artigos.html">Informações</a>
             </div>
             <div class="box">
                 Orientações
             </div>
             <div class="box-b">
-                <a href="./pages/orientacao.html">Acesse aqui</a>
+                <a href="./pages/orientacao.html">Informações</a>
             </div>
             <div class="box">
                 Hidrodinâmica de Biorreatores
