inserindo links das páginas
acertando todos os links das páginas

--- a/index.html
+++ b/index.html
@@ -109,13 +109,13 @@
                 Desenho Técnico
             </div>
             <div class="box-b">
-                <a href="#">Acesse aqui</a>
+                <a href="./pages/desenho.html">Acesse aqui</a>
             </div>
             <div class="box">
                 Processos Fermentativos Industriais
             </div>
             <div class="box-b">
-                <a href="#">Acesse aqui</a>
+                <a href="./pages/pfi.html">Acesse aqui</a>
             </div>
             <div class="box">
                 Balanço de Massa e Energia
