--- a/pages/artigos.html
+++ b/pages/artigos.html
@@ -24,8 +24,8 @@
          <nav class="menu">
             <ul>
                 <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Artigos</a></li>
-                <li><a href="#">Orientações</a></li>
+                <li><a href="./artigos.html">Artigos</a></li>
+                <li><a href="./orientacao.html">Orientações</a></li>
                 <li><a href="#">Hidrodinâmica</a></li>
                 <li><a href="#">Modelagem</a></li>
                 <li><a href="#">Cultivos</a></li>
