--- a/pages/orientacao.html
+++ b/pages/orientacao.html
@@ -22,9 +22,9 @@
    <header>
          <nav class="menu">
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Artigos Publicados</a></li>
-                <li><a href="#">Orientações</a></li>
+                 <li><a href="../index.html">Home</a></li>
+                <li><a href="./artigos.html">Artigos</a></li>
+                <li><a href="./orientacao.html">Orientações</a></li>
                 <li><a href="#">Hidrodinâmica</a></li>
                 <li><a href="#">Modelagem</a></li>
                 <li><a href="#">Cultivos</a></li>
