--- a/pages/pfi.html
+++ b/pages/pfi.html
@@ -22,10 +22,10 @@
    <header>
          <nav class="menu">
             <ul>
-                <li><a href="../index.html">Home</a></li>
-                <li><a href="#">Biorreatores</a></li>
-                <li><a href="#">Processos</a></li>
-                <li><a href="#">Desenho</a></li>
+               <li><a href="../index.html">Home</a></li>
+                <li><a href="./biorreatores.html">Biorreatores</a></li>
+                <li><a href="./pfi.html">Processos</a></li>
+                <li><a href="./desenho.html">Desenho</a></li>
                 <li><a href="#">Balanço</a></li>
                 <li><a href="#">Python</a></li>
             </ul>
