--- a/pages/orientacao.html
+++ b/pages/orientacao.html
@@ -95,7 +95,7 @@
                 2017
             </td>
             <td>
-               <a href="../doc/dissertacao_renata.pdf">Dissertação</a>
+               <a href="https://repositorio.unesp.br/handle/11449/192657">Dissertação</a>
             </td>
         </tr>
         </tr>
