Deixando mais compacto
Diminuindo o site

--- a/index.html
+++ b/index.html
@@ -79,19 +79,19 @@
                 Hidrodinâmica de Biorreatores
             </div>
             <div class="box-b">
-                <a href="#">Acesse aqui</a>
+                <a href="#">Informações</a>
             </div>
             <div class="box">
                 Modelagem crescimento microbiano
             </div>
             <div class="box-b">
-                <a href="#">Acesse aqui</a>
+                <a href="#">Informações</a>
             </div>
              <div class="box">
                 Cultivos Microbianos
             </div>
             <div class="box-b">
-                <a href="#">Acesse aqui</a>
+                <a href="#">Informações</a>
             </div>
         </div>
     </section>
@@ -103,33 +103,21 @@
                 Biorreatores: Projetos e Modelagem
             </div>
             <div class="box-b">
-                <a href="./pages/biorreatores.html">Acesse aqui</a>
+                <a href="./pages/biorreatores.html">Informações</a>
             </div>
             <div class="box">
                 Desenho Técnico
             </div>
             <div class="box-b">
-                <a href="./pages/desenho.html">Acesse aqui</a>
+                <a href="./pages/desenho.html">Informações</a>
             </div>
             <div class="box">
                 Processos Fermentativos Industriais
             </div>
             <div class="box-b">
-                <a href="./pages/pfi.html">Acesse aqui</a>
+                <a href="./pages/pfi.html">Informações</a>
             </div>
-            <div class="box">
-                Balanço de Massa e Energia
-            </div>
-            <div class="box-b">
-                <a href="#">Acesse aqui</a>
-            </div>
-             <div class="box">
-                Python
-            </div>
-            <div class="box-b">
-                <a href="#">Acesse aqui</a>
-            </div>
-            
+           
         </div>
     </section>
 
