criação da página de modelagem
criando a página de modelagem

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                 Modelagem crescimento microbiano
             </div>
             <div class="box-b">
-                <a href="#">Informações</a>
+                <a href="./pages/modelagem.html">Informações</a>
             </div>
              <div class="box">
                 Cultivos Microbianos
