--- a/pages/artigos.html
+++ b/pages/artigos.html
@@ -27,7 +27,7 @@
                 <li><a href="./artigos.html">Artigos</a></li>
                 <li><a href="./orientacao.html">Orientações</a></li>
                 <li><a href="#">Hidrodinâmica</a></li>
-                <li><a href="#">Modelagem</a></li>
+                <li><a href="./modelagem.html">Modelagem</a></li>
                 <li><a href="#">Cultivos</a></li>
             </ul>
         </nav>
